<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="political_preparedness_logo_ballot">Political preparedness logo ballot</string>
    <string name="find_my_reps_text">Find my reps</string>
    <string name="upcoming_election">Upcoming Elections</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="state">State:</string>
    <string name="view_state_locations">View state locations</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="no_info">No information available. Try later</string>
    <string name="election_info">Election info:</string>
    <string name="click_here">Click Here</string>
    <string name="use_my_location">Use my Location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_profile_picture">Representative profile picture</string>
    <string name="twitter_link">Twitter Link</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="web_link">Web Link</string>
    <string name="fragment_launch">Launch</string>
    <string name="voter_info">Voter Information</string>
    <string name="elections">Elections</string>
    <string name="find_reps">Find Representatives</string>
    <string name="ballot_url">Ballot Url</string>
    <string name="correspondence">Correspondence:</string>

    <!-- COMPLETED: Add necessary string values -->

</resources>
