<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_space"
            android:elevation="@dimen/small_spacing"
            app:cardCornerRadius="@dimen/tiny_space">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/rep_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_spacing"
                    android:contentDescription="@string/representative_profile_picture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:profileImage="@{representative.official.photoUrl}" />

                <TextView
                    android:id="@+id/rep_office"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_spacing"
                    android:layout_marginTop="@dimen/small_spacing"
                    android:text="@{representative.office.name}"
                    android:textSize="@dimen/header_text_three"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/rep_image"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="President of the United States" />

                <TextView
                    android:id="@+id/rep_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_spacing"
                    android:text="@{representative.official.name}"
                    android:textSize="@dimen/content_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/rep_image"
                    app:layout_constraintTop_toBottomOf="@id/rep_office"
                    tools:text="Joseph R. Biden" />

                <TextView
                    android:id="@+id/rep_political_party"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_spacing"
                    android:text="@{representative.official.party}"
                    android:textSize="@dimen/content_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/rep_image"
                    app:layout_constraintTop_toBottomOf="@id/rep_name"
                    tools:text="Democratic Party" />

                <!--    Link buttons-->
                <ImageView
                    android:id="@+id/twitter_link"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/small_spacing"
                    android:contentDescription="@string/twitter_link"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rep_name"
                    app:srcCompat="@drawable/ic_twitter" />

                <ImageView
                    android:id="@+id/facebook_link"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/small_spacing"
                    android:contentDescription="@string/facebook_link"
                    app:layout_constraintEnd_toStartOf="@id/twitter_link"
                    app:layout_constraintTop_toBottomOf="@id/rep_name"
                    app:srcCompat="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/web_link"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/small_spacing"
                    android:contentDescription="@string/web_link"
                    app:layout_constraintEnd_toStartOf="@id/facebook_link"
                    app:layout_constraintTop_toBottomOf="@id/rep_name"
                    app:srcCompat="@drawable/ic_www" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>