<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- COMPLETED: Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- COMPLETED: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:title="@{viewModel.electionReceived.name}"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent" />

        <!--         COMPLETED: Add visual styling -->

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/item_subhead_text_style"
            android:layout_marginStart="@dimen/small_space"
            android:text="@{viewModel.electionReceived.electionDay.toGMTString()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name" />
        <!--        <TextView-->
        <!--            android:id="@+id/election_date"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="@dimen/default_padding"-->
        <!--            android:textSize="@dimen/header_two_text"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/election_name"-->
        <!--            tools:text="12 November 2055" />-->

        <!-- COMPLETED: Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            style="@style/item_subhead_text_style"
            android:layout_marginTop="@dimen/normal_space"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tiny_space"
            android:text="@string/state"
            tools:text="@string/state"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/state_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_space"
            android:layout_marginTop="16dp"
            style="@style/item_subhead_text_style"
            android:text="@{viewModel.voterInfo.state[0].name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:text="Illinois" />

        <TextView
            android:id="@+id/info_url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/item_subhead_text_style"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/election_info"
            android:layout_marginStart="@dimen/small_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:text="Election Info" />


        <!-- COMPLETED: Add visual styling and content -->

        <!-- COMPLETED: Add click binding to open web URL -->
        <!-- COMPLETED: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot_text"
            style="@style/item_subhead_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/ballot_url"
            app:layout_constraintStart_toStartOf="@id/info_url_text"
            app:layout_constraintTop_toBottomOf="@id/info_url_text" />

        <TextView
            android:id="@+id/state_ballot_url"
            style="@style/item_subhead_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@{viewModel.voterInfo.state[0].electionAdministrationBody.ballotInfoUrl}"
            android:textColor="@color/secondaryColor"
            app:layout_constraintStart_toStartOf="@id/election_info_url"
            app:layout_constraintTop_toBottomOf="@id/election_info_url"
            tools:text="url" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- COMPLETED: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/item_subhead_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/correspondence"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot_text" />

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address"
            style="@style/item_subhead_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            app:layout_constraintStart_toStartOf="@id/state_ballot_url"
            app:layout_constraintTop_toBottomOf="@id/state_ballot_url" />


        <!-- COMPLETED: Add click binding to open web URL -->
        <TextView
            android:id="@+id/election_info_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/view_state_locations"
            style="@style/item_subhead_text_style"
            android:textStyle="italic|bold"
            android:textColor="@color/secondaryColor"
            app:layout_constraintStart_toEndOf="@id/info_url_text"
            app:layout_constraintTop_toBottomOf="@+id/state_name" />

        <!-- COMPLETED: Add button to save election to Room -->
        <Button
            android:id="@+id/follow_election_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_space"
            style="@style/button_one_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>